implemented API and security integration with swagger